--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://HerCycleDiary:HerCycleDiary@cluster0.bkxzcxa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://localhost:27017
 JWT_SECRET_KEY=secret
